animal-lab.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: animal-bear
  labels:
    app: ui
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: frontend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 0%
  template:
    metadata:
      labels:
        tier: frontend
    spec:
      containers:
      - name: animal-test
        image: "supergiantkir/animals:bear"
---
apiVersion: apps/v1
kind: Deployment  
metadata:
  name: animal-moose
  labels:
    app: ui
    tier: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      tier: frontend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 0%
  template:
    metadata:
      labels:
        tier: frontend
    spec:
      containers:
      - name: animal-moose
        image: "supergiantkir/animals:moose"
