deploy-lab2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cuda-test
  labels:
    app: ui
    tier: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      tier: frontend
  template:
    metadata:
      labels:
        tier: frontend
    spec:
      strategy:
        type: RollingUpdate
      rollingUpdate:
        maxSurge: 100%
        maxunavailable: 0%
      containers:
      - name: cuda-test
        image: "yanivomc/spring-music:latest"
      # affinity:
      #   nodeAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #       nodeSelectorTerms:
      #       - matchExpressions:
      #         - key: topology.kubernetes.io/zone
      #           operator: In
      #           values:
      #           - eu-west-1b
      #           - eu-west-1c
      #     preferredDuringSchedulingIgnoredDuringExecution:
      #     - weight: 1
      #       preference:
      #         matchExpressions:
      #         - key: node.kubernetes.io/instance-type
      #           operator: In
      #           values:
      #           - t3.large
      #   podAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #     - labelSelector:
      #         matchExpressions:
      #         - key: cache
      #           operator: In
      #           values:
      #           - redis
      #       topologyKey: topology.kubernetes.io/zone
      #   podAntiAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #     - labelSelector:
      #           matchExpressions:
      #           - key: app
      #             operator: In
      #             values:
      #             - spring-music
      #       topologyKey: topology.kubernetes.io/zone
---

## THIS will start a redis pod as part of the example and affinity rule above
apiVersion: v1
kind: Pod
metadata:
  name: redis-cache
  labels:
    cache: redis
spec:
  # affinity:
  #   nodeAffinity:
  #     requiredDuringSchedulingIgnoredDuringExecution:
  #       nodeSelectorTerms:
  #       - matchExpressions:
  #         - key: topology.kubernetes.io/zone
  #           operator: In
  #           values:
  #           - eu-west-1b
  #           - eu-west-1c
  #     preferredDuringSchedulingIgnoredDuringExecution:
  #     - weight: 1
  #       preference:
  #         matchExpressions:
  #         - key: node.kubernetes.io/instance-type
  #           operator: In
  #           values:
  #           - t3.large
  containers:
  - name: redis
    image: redis:latest
