label-lab.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cuda-test
spec:
  containers:
    - name: cuda-test
      image: "yanivomc/spring-music:latest"
  nodeSelector:
    env: prod
